docs/apache-airflow-providers-elasticsearch/2.0.2/_sources/_api/airflow/providers/elasticsearch/hooks/elasticsearch/index.rst.txt
:mod:`airflow.providers.elasticsearch.hooks.elasticsearch`
==========================================================

.. py:module:: airflow.providers.elasticsearch.hooks.elasticsearch


Module Contents
---------------

.. py:class:: ElasticsearchHook(schema: str = 'http', connection: Optional[AirflowConnection] = None, *args, **kwargs)

   Bases: :class:`airflow.hooks.dbapi.DbApiHook`

   Interact with Elasticsearch through the elasticsearch-dbapi.

   This hook uses the Elasticsearch conn_id.

   :param elasticsearch_conn_id: The :ref:`ElasticSearch connection id <howto/connection:elasticsearch>`
       used for Elasticsearch credentials.
   :type elasticsearch_conn_id: str

   .. attribute:: conn_name_attr
      :annotation: = elasticsearch_conn_id

      

   .. attribute:: default_conn_name
      :annotation: = elasticsearch_default

      

   .. attribute:: conn_type
      :annotation: = elasticsearch

      

   .. attribute:: hook_name
      :annotation: = Elasticsearch

      

   
   .. method:: get_conn(self)

      Returns a elasticsearch connection object



   
   .. method:: get_uri(self)




